# javaee7-angular/src/main/java/com/cortez/samples/javaee7angular/rest/TableResource.java
@@ -14,9 +14,12 @@ import javax.ws.rs.POST;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
+import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Application;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
 
+import com.cortez.samples.javaee7angular.data.Person;
 import com.cortez.samples.javaee7angular.data.TableResto;
 
 @Stateless
@@ -24,46 +27,54 @@ import com.cortez.samples.javaee7angular.data.TableResto;
 @Path("tables")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
-public class TableResource extends Application{
-	
+public class TableResource extends Application {
+
 	@PersistenceContext
-    private EntityManager entityManager;
-	
+	private EntityManager entityManager;
+
 	@GET
 	@Path("{id}")
 	public TableResto getTable(@PathParam("id") Long id) {
 		TableResto t = new TableResto();
-		try{
+		try {
 			return entityManager.find(TableResto.class, id);
-		}catch(Exception e){
+		} catch (Exception e) {
 			StringWriter errors = new StringWriter();
 			e.printStackTrace(new PrintWriter(errors));
 			t.setLog(e.getLocalizedMessage()+"/n"+errors.toString());
+			//throw new WebApplicationException(e.getLocalizedMessage() + "/n" + errors.toString());
 		}
 		return t;
 	}
-	
+
 	@POST
-    public TableResto saveTable(TableResto table) {
-        if (table.getId() == null) {
+	public TableResto saveTable(TableResto table) {
+		TableResto existingTable = getTable(table.getId());
+        if (existingTable == null) { // Ajout
             TableResto tableToSave = new TableResto();
             tableToSave.setAvailable_places(table.getAvailable_places());
             tableToSave.setMovable(table.isMovable());
-            tableToSave.setNumber(table.getNumber());
-            entityManager.persist(table);
-        } else {
-            TableResto tableToUpdate = getTable(table.getId());
-            tableToUpdate.setAvailable_places(table.getAvailable_places());
-            tableToUpdate.setMovable(table.isMovable());
-            tableToUpdate.setNumber(table.getNumber());
-            table = entityManager.merge(tableToUpdate);
+            tableToSave.setNumber(table.getNumber());         
+            try{
+            	entityManager.persist(tableToSave);
+            }catch(Exception e){
+            	StringWriter errors = new StringWriter();
+    			e.printStackTrace(new PrintWriter(errors));
+    			tableToSave.setLog(e.getLocalizedMessage()+"/n"+errors.toString());
+            }
+            return tableToSave;
+            
+        } else { // Modif
+        	existingTable.setAvailable_places(table.getAvailable_places());
+        	existingTable.setMovable(table.isMovable());
+        	existingTable.setNumber(table.getNumber());   
+            return entityManager.merge(existingTable);
         }
-        return table;
-    }
-	
+	}
+
 	@DELETE
-    @Path("{id}")
-    public void deleteTable(@PathParam("id") Long id) {
-        entityManager.remove(getTable(id));
-    }
+	@Path("{id}")
+	public void deleteTable(@PathParam("id") Long id) {
+		entityManager.remove(getTable(id));
+	}
 }
